--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "npx vite serve public/"
+    "serve": "npx vite serve public/ & npx tailwindcss -i ./assets/main.css -o ./public/css/main.css --watch"
   },
   "keywords": [],
   "author": "",
